Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.8***

***  Support runtime access to public signal names.

* Verilator 3.801 2010/03/17

***  Support "break", "continue", "return".

***  Support "`default_nettype none|wire".  [Dominic Plunkett]

**** Skip SystemC tests if not installed.  [Iztok Jeras]

**** Fix clock-gates with non-AND complex logic, bug220. [Ashutosh Das]

**** Fix flushing VCD buffers on $stop.  [Ashutosh Das]

**** Fix Mac OS-X compile issues, bug217.  [Joshua Wise, Trevor Williams]

**** Fix make uninstall, bug216.  [Iztok Jeras]

**** Fix parametrized defines with empty arguments.

* Verilator 3.800 2010/02/07

Application visible changes:

**   SystemPerl is no longer required for tracing.
     Applications must use VerilatedVcdC class in place of SpTraceVcdC.

**   SystemVerilog 1800-2009 is now the default language.
     Thus "global" etc are now keywords.  See the --language option.

New features:

**   Support SystemVerilog types "byte", "chandle", "int", "longint",
     "shortint", "time", "var" and "void" in variables and functions.

**   Support "program", "package", "import" and $unit.

**   Support typedef and enum.  [by Donal Casey]

**   Support direct programming interface (DPI) "import" and "export".
     Includes an extension to map user $system PLI calls to the DPI.

***  Support assignments of multidimensional slices, bug170. [by Byron Bradley]

***  Support multidimensional inputs/outputs, bug171. [by Byron Bradley]

***  Support "reg [1:0][1:0][1:0]" and "reg x [3][2]", bug176.  [Byron Bradley]

***  Support declarations in loop initializers, bug172.  [by Byron Bradley]

***  Support $test$plusargs and $value$plusargs, but see the docs!

***  Support $sformat and $swrite.

***  Support 1800-2009 define defaults and `undefineall.
